excellent now I can push

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="navbar"><span>Neon Effect</span></div>
     <div class="wrapper">
         <div class="neon-wrapper">
-            <span class="txt">hey dude</span>
+            <span class="txt">hey</span>
             <span class="gradient"></span>
             <span class="dodge"></span>
         </div>
